update swag docs by wy
